--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     services:
-      # Label used to access the service container
       mongodb:
-        # Docker Hub image
         image: mongo
         env:
           MONGO_INITDB_ROOT_USERNAME: admin
@@ -25,13 +23,16 @@ jobs:
           --health-retries 5
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: 18.19.1
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
+      - name: Lint Code
+        run: npm run lint
         env:
           DB_URI: mongodb://mongodb:27017/astro-db
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
