Adding new mongodb package to CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,37 +4,35 @@ on:
   push:
     branches:
       - main
+
 jobs:
   test:
     runs-on: ubuntu-latest
-    services:
-      mongodb:
-        image: mongo
-        env:
-          MONGO_INITDB_ROOT_USERNAME: admin
-          MONGO_INITDB_ROOT_PASSWORD: admin
-          MONGO_INITDB_DATABASE: astro-db
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd mongo
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    strategy:
+      matrix:
+        node-version: [18.19.1]
+        mongodb-version: ['6.0']
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - name: Git checkout
+        uses: actions/checkout@v3
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: 18.19.1
-          cache: 'npm'
+          node-version: ${{ matrix.node-version }}
+
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+
       - name: Install dependencies
         run: npm install
       - name: Lint Code
         run: npm run lint
         env:
-          DB_URI: mongodb://mongodb:27017/astro-db
+          DB_URI: mongodb://127.0.0.1:27017/astro-db
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
   publish:
