--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,18 +38,24 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2
-      - name: Build image and push to GitHub Packages
-        uses: docker/build-push-action@v1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ github.token }}
           registry: ghcr.io
-          repository: mhmdksh/Astrolabs-Backend-Nodejs
-          add_git_labels: true
-          tag_with_ref: true
-          tag_with_sha: true
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/mhmdksh/astro-backend:latest
 
   deploy:
     needs: publish
