--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,18 +44,17 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Login to Docker Hub Container Registry
+        uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5.1.0
         with:
           context: .
           push: true
-          tags: ghcr.io/mhmdksh/astro-backend:latest
+          tags: eddsnx3/astro-backend:latest
 
   deploy:
     needs: publish
